scripts/nullaway/nullgtn/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8.txt
../nullgtn/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8/src/org/arabeyes/itl/hijri/HijriCalculator.java:73: error: [NullAway] @NonNull field HijriCalculator$sDate.units not initialized
        String units;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8/src/org/arabeyes/itl/prayer/Method.java:265: error: [NullAway] initializer method does not guarantee @NonNull fields round (line 172), mathhab (line 174), extremeLatitude (line 178) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    protected Method() {
              ^
    (see http://t.uber.com/nullaway )
2 errors
